phase2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    NUMERROR
    TOKENERROR
    WHITESPACE

Grammar

Rule 0     S' -> program
Rule 1     program -> macros classes
Rule 2     macros -> macros macro
Rule 3     macros -> <empty>
Rule 4     macro -> reference
Rule 5     reference -> REFERENCE STRING
Rule 6     classes -> classes class
Rule 7     classes -> <empty>
Rule 8     class -> CLASS ID LCB symbol_decs RCB
Rule 9     symbol_decs -> symbol_decs symbol_dec
Rule 10    symbol_decs -> <empty>
Rule 11    symbol_dec -> var_dec
Rule 12    symbol_dec -> func_dec
Rule 13    var_dec -> var_type var_list SEMICOLON
Rule 14    var_type -> return_type
Rule 15    var_type -> lvalue1
Rule 16    var_type -> STATIC return_type
Rule 17    var_type -> STATIC lvalue1
Rule 18    return_type -> INT_TYPE
Rule 19    return_type -> REAL_TYPE
Rule 20    return_type -> BOOL_TYPE
Rule 21    return_type -> STRING_TYPE
Rule 22    var_list -> var_list COMMA var_list_item
Rule 23    var_list -> var_list_item
Rule 24    item1 -> ID ASSIGNMENT exp
Rule 25    var_list_item -> item1
Rule 26    var_list_item -> ID
Rule 27    func_dec -> var_type func_body
Rule 28    func_dec -> VOID func_body
Rule 29    func_dec -> STATIC VOID func_body
Rule 30    func_body -> ID LP formal_arguments RP block
Rule 31    formal_arguments -> formal_arguments_list
Rule 32    formal_arguments -> <empty>
Rule 33    formal_arguments_list -> formal_arguments_list COMMA formal_argument
Rule 34    formal_arguments_list -> formal_argument
Rule 35    formal_argument -> return_type ID
Rule 36    formal_argument -> lvalue1 ID
Rule 37    block -> LCB statements_list RCB
Rule 38    block -> statement
Rule 39    statements_list -> statements_list statement
Rule 40    statements_list -> <empty>
Rule 41    statement -> SEMICOLON
Rule 42    statement -> exp SEMICOLON
Rule 43    statement -> assignment
Rule 44    statement -> print
Rule 45    statement -> statement_var_dec
Rule 46    statement -> if
Rule 47    statement -> for
Rule 48    statement -> while
Rule 49    statement -> return
Rule 50    statement -> break
Rule 51    statement -> continue
Rule 52    assignment -> lvalue ASSIGNMENT exp SEMICOLON
Rule 53    lvalue -> lvalue1
Rule 54    lvalue -> lvalue2
Rule 55    lvalue2 -> ID DOT ID
Rule 56    lvalue1 -> ID
Rule 57    print -> PRINT LP STRING RP SEMICOLON
Rule 58    statement_var_dec -> return_type var_list SEMICOLON
Rule 59    statement_var_dec -> lvalue1 var_list SEMICOLON
Rule 60    if -> IF LP exp RP block
Rule 61    if -> IF LP exp RP block ELSE block
Rule 62    if -> IF LP exp RP block elseifs
Rule 63    if -> IF LP exp RP block elseifs ELSE block
Rule 64    elseifs -> elseifs elseif
Rule 65    elseifs -> elseif
Rule 66    elseif -> ELSEIF LP exp RP block
Rule 67    for -> FOR LP ID IN exp TO exp STEPS exp RP block
Rule 68    while -> WHILE LP exp RP block
Rule 69    return -> RETURN exp SEMICOLON
Rule 70    break -> BREAK SEMICOLON
Rule 71    continue -> CONTINUE SEMICOLON
Rule 72    exp -> INTEGER
Rule 73    exp -> REAL
Rule 74    exp -> TRUE
Rule 75    exp -> FALSE
Rule 76    exp -> STRING
Rule 77    exp -> lvalue
Rule 78    exp -> binary_operation
Rule 79    exp -> logical_operation
Rule 80    exp -> comparison_operation
Rule 81    exp -> bitwise_operation
Rule 82    exp -> unary_operation
Rule 83    exp -> LP exp RP
Rule 84    exp -> function_call
Rule 85    binary_operation -> exp ADDITION exp
Rule 86    binary_operation -> exp SUBTRACTION exp
Rule 87    binary_operation -> exp MULTIPLICATION exp
Rule 88    binary_operation -> exp DIVISION exp
Rule 89    binary_operation -> exp MODULO exp
Rule 90    binary_operation -> exp POWER exp
Rule 91    binary_operation -> exp SHIFT_LEFT exp
Rule 92    binary_operation -> exp SHIFT_RIGHT exp
Rule 93    logical_operation -> exp AND exp
Rule 94    logical_operation -> exp OR exp
Rule 95    comparison_operation -> exp LT exp
Rule 96    comparison_operation -> exp LE exp
Rule 97    comparison_operation -> exp GT exp
Rule 98    comparison_operation -> exp GE exp
Rule 99    comparison_operation -> exp EQ exp
Rule 100   comparison_operation -> exp NE exp
Rule 101   bitwise_operation -> exp BITWISE_AND exp
Rule 102   bitwise_operation -> exp BITWISE_OR exp
Rule 103   unary_operation -> SUBTRACTION exp
Rule 104   unary_operation -> NOT exp
Rule 105   unary_operation -> BITWISE_NOT exp
Rule 106   function_call -> lvalue2 function_call_body
Rule 107   function_call -> lvalue1 function_call_body
Rule 108   function_call_body -> LP actual_arguments RP
Rule 109   actual_arguments -> actual_arguments_list
Rule 110   actual_arguments -> <empty>
Rule 111   actual_arguments_list -> actual_arguments_list COMMA exp
Rule 112   actual_arguments_list -> exp

Terminals, with rules where they appear

ADDITION             : 85
AND                  : 93
ASSIGNMENT           : 24 52
BITWISE_AND          : 101
BITWISE_NOT          : 105
BITWISE_OR           : 102
BOOL_TYPE            : 20
BREAK                : 70
CLASS                : 8
COMMA                : 22 33 111
COMMENT              : 
CONTINUE             : 71
DIVISION             : 88
DOT                  : 55
ELSE                 : 61 63
ELSEIF               : 66
EQ                   : 99
FALSE                : 75
FOR                  : 67
GE                   : 98
GT                   : 97
ID                   : 8 24 26 30 35 36 55 55 56 67
IF                   : 60 61 62 63
IN                   : 67
INTEGER              : 72
INT_TYPE             : 18
LCB                  : 8 37
LE                   : 96
LP                   : 30 57 60 61 62 63 66 67 68 83 108
LT                   : 95
MODULO               : 89
MULTIPLICATION       : 87
NE                   : 100
NOT                  : 104
NUMERROR             : 
OR                   : 94
POWER                : 90
PRINT                : 57
RCB                  : 8 37
REAL                 : 73
REAL_TYPE            : 19
REFERENCE            : 5
RETURN               : 69
RP                   : 30 57 60 61 62 63 66 67 68 83 108
SEMICOLON            : 13 41 42 52 57 58 59 69 70 71
SHIFT_LEFT           : 91
SHIFT_RIGHT          : 92
STATIC               : 16 17 29
STEPS                : 67
STRING               : 5 57 76
STRING_TYPE          : 21
SUBTRACTION          : 86 103
TO                   : 67
TOKENERROR           : 
TRUE                 : 74
VOID                 : 28 29
WHILE                : 68
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

actual_arguments     : 108
actual_arguments_list : 109 111
assignment           : 43
binary_operation     : 78
bitwise_operation    : 81
block                : 30 60 61 61 62 63 63 66 67 68
break                : 50
class                : 6
classes              : 1 6
comparison_operation : 80
continue             : 51
elseif               : 64 65
elseifs              : 62 63 64
exp                  : 24 42 52 60 61 62 63 66 67 67 67 68 69 83 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 104 105 111 112
for                  : 47
formal_argument      : 33 34
formal_arguments     : 30
formal_arguments_list : 31 33
func_body            : 27 28 29
func_dec             : 12
function_call        : 84
function_call_body   : 106 107
if                   : 46
item1                : 25
logical_operation    : 79
lvalue               : 52 77
lvalue1              : 15 17 36 53 59 107
lvalue2              : 54 106
macro                : 2
macros               : 1 2
print                : 44
program              : 0
reference            : 4
return               : 49
return_type          : 14 16 35 58
statement            : 38 39
statement_var_dec    : 45
statements_list      : 37 39
symbol_dec           : 9
symbol_decs          : 8 9
unary_operation      : 82
var_dec              : 11
var_list             : 13 22 58 59
var_list_item        : 22 23
var_type             : 13 27
while                : 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . macros classes
    (2) macros -> . macros macro
    (3) macros -> .

    REFERENCE       reduce using rule 3 (macros -> .)
    CLASS           reduce using rule 3 (macros -> .)
    $end            reduce using rule 3 (macros -> .)

    program                        shift and go to state 1
    macros                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> macros . classes
    (2) macros -> macros . macro
    (6) classes -> . classes class
    (7) classes -> .
    (4) macro -> . reference
    (5) reference -> . REFERENCE STRING

    CLASS           reduce using rule 7 (classes -> .)
    $end            reduce using rule 7 (classes -> .)
    REFERENCE       shift and go to state 6

    classes                        shift and go to state 3
    macro                          shift and go to state 4
    reference                      shift and go to state 5

state 3

    (1) program -> macros classes .
    (6) classes -> classes . class
    (8) class -> . CLASS ID LCB symbol_decs RCB

    $end            reduce using rule 1 (program -> macros classes .)
    CLASS           shift and go to state 8

    class                          shift and go to state 7

state 4

    (2) macros -> macros macro .

    REFERENCE       reduce using rule 2 (macros -> macros macro .)
    CLASS           reduce using rule 2 (macros -> macros macro .)
    $end            reduce using rule 2 (macros -> macros macro .)


state 5

    (4) macro -> reference .

    REFERENCE       reduce using rule 4 (macro -> reference .)
    CLASS           reduce using rule 4 (macro -> reference .)
    $end            reduce using rule 4 (macro -> reference .)


state 6

    (5) reference -> REFERENCE . STRING

    STRING          shift and go to state 9


state 7

    (6) classes -> classes class .

    CLASS           reduce using rule 6 (classes -> classes class .)
    $end            reduce using rule 6 (classes -> classes class .)


state 8

    (8) class -> CLASS . ID LCB symbol_decs RCB

    ID              shift and go to state 10


state 9

    (5) reference -> REFERENCE STRING .

    REFERENCE       reduce using rule 5 (reference -> REFERENCE STRING .)
    CLASS           reduce using rule 5 (reference -> REFERENCE STRING .)
    $end            reduce using rule 5 (reference -> REFERENCE STRING .)


state 10

    (8) class -> CLASS ID . LCB symbol_decs RCB

    LCB             shift and go to state 11


state 11

    (8) class -> CLASS ID LCB . symbol_decs RCB
    (9) symbol_decs -> . symbol_decs symbol_dec
    (10) symbol_decs -> .

    RCB             reduce using rule 10 (symbol_decs -> .)
    VOID            reduce using rule 10 (symbol_decs -> .)
    STATIC          reduce using rule 10 (symbol_decs -> .)
    INT_TYPE        reduce using rule 10 (symbol_decs -> .)
    REAL_TYPE       reduce using rule 10 (symbol_decs -> .)
    BOOL_TYPE       reduce using rule 10 (symbol_decs -> .)
    STRING_TYPE     reduce using rule 10 (symbol_decs -> .)
    ID              reduce using rule 10 (symbol_decs -> .)

    symbol_decs                    shift and go to state 12

state 12

    (8) class -> CLASS ID LCB symbol_decs . RCB
    (9) symbol_decs -> symbol_decs . symbol_dec
    (11) symbol_dec -> . var_dec
    (12) symbol_dec -> . func_dec
    (13) var_dec -> . var_type var_list SEMICOLON
    (27) func_dec -> . var_type func_body
    (28) func_dec -> . VOID func_body
    (29) func_dec -> . STATIC VOID func_body
    (14) var_type -> . return_type
    (15) var_type -> . lvalue1
    (16) var_type -> . STATIC return_type
    (17) var_type -> . STATIC lvalue1
    (18) return_type -> . INT_TYPE
    (19) return_type -> . REAL_TYPE
    (20) return_type -> . BOOL_TYPE
    (21) return_type -> . STRING_TYPE
    (56) lvalue1 -> . ID

    RCB             shift and go to state 14
    VOID            shift and go to state 19
    STATIC          shift and go to state 20
    INT_TYPE        shift and go to state 23
    REAL_TYPE       shift and go to state 24
    BOOL_TYPE       shift and go to state 25
    STRING_TYPE     shift and go to state 26
    ID              shift and go to state 13

    symbol_dec                     shift and go to state 15
    var_dec                        shift and go to state 16
    func_dec                       shift and go to state 17
    var_type                       shift and go to state 18
    return_type                    shift and go to state 21
    lvalue1                        shift and go to state 22

state 13

    (56) lvalue1 -> ID .

    ID              reduce using rule 56 (lvalue1 -> ID .)


state 14

    (8) class -> CLASS ID LCB symbol_decs RCB .

    CLASS           reduce using rule 8 (class -> CLASS ID LCB symbol_decs RCB .)
    $end            reduce using rule 8 (class -> CLASS ID LCB symbol_decs RCB .)


state 15

    (9) symbol_decs -> symbol_decs symbol_dec .

    RCB             reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    VOID            reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    STATIC          reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    INT_TYPE        reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    REAL_TYPE       reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    BOOL_TYPE       reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    STRING_TYPE     reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    ID              reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)


state 16

    (11) symbol_dec -> var_dec .

    RCB             reduce using rule 11 (symbol_dec -> var_dec .)
    VOID            reduce using rule 11 (symbol_dec -> var_dec .)
    STATIC          reduce using rule 11 (symbol_dec -> var_dec .)
    INT_TYPE        reduce using rule 11 (symbol_dec -> var_dec .)
    REAL_TYPE       reduce using rule 11 (symbol_dec -> var_dec .)
    BOOL_TYPE       reduce using rule 11 (symbol_dec -> var_dec .)
    STRING_TYPE     reduce using rule 11 (symbol_dec -> var_dec .)
    ID              reduce using rule 11 (symbol_dec -> var_dec .)


state 17

    (12) symbol_dec -> func_dec .

    RCB             reduce using rule 12 (symbol_dec -> func_dec .)
    VOID            reduce using rule 12 (symbol_dec -> func_dec .)
    STATIC          reduce using rule 12 (symbol_dec -> func_dec .)
    INT_TYPE        reduce using rule 12 (symbol_dec -> func_dec .)
    REAL_TYPE       reduce using rule 12 (symbol_dec -> func_dec .)
    BOOL_TYPE       reduce using rule 12 (symbol_dec -> func_dec .)
    STRING_TYPE     reduce using rule 12 (symbol_dec -> func_dec .)
    ID              reduce using rule 12 (symbol_dec -> func_dec .)


state 18

    (13) var_dec -> var_type . var_list SEMICOLON
    (27) func_dec -> var_type . func_body
    (22) var_list -> . var_list COMMA var_list_item
    (23) var_list -> . var_list_item
    (30) func_body -> . ID LP formal_arguments RP block
    (25) var_list_item -> . item1
    (26) var_list_item -> . ID
    (24) item1 -> . ID ASSIGNMENT exp

    ID              shift and go to state 30

    var_list                       shift and go to state 27
    func_body                      shift and go to state 28
    var_list_item                  shift and go to state 29
    item1                          shift and go to state 31

state 19

    (28) func_dec -> VOID . func_body
    (30) func_body -> . ID LP formal_arguments RP block

    ID              shift and go to state 33

    func_body                      shift and go to state 32

state 20

    (29) func_dec -> STATIC . VOID func_body
    (16) var_type -> STATIC . return_type
    (17) var_type -> STATIC . lvalue1
    (18) return_type -> . INT_TYPE
    (19) return_type -> . REAL_TYPE
    (20) return_type -> . BOOL_TYPE
    (21) return_type -> . STRING_TYPE
    (56) lvalue1 -> . ID

    VOID            shift and go to state 34
    INT_TYPE        shift and go to state 23
    REAL_TYPE       shift and go to state 24
    BOOL_TYPE       shift and go to state 25
    STRING_TYPE     shift and go to state 26
    ID              shift and go to state 13

    return_type                    shift and go to state 35
    lvalue1                        shift and go to state 36

state 21

    (14) var_type -> return_type .

    ID              reduce using rule 14 (var_type -> return_type .)


state 22

    (15) var_type -> lvalue1 .

    ID              reduce using rule 15 (var_type -> lvalue1 .)


state 23

    (18) return_type -> INT_TYPE .

    ID              reduce using rule 18 (return_type -> INT_TYPE .)


state 24

    (19) return_type -> REAL_TYPE .

    ID              reduce using rule 19 (return_type -> REAL_TYPE .)


state 25

    (20) return_type -> BOOL_TYPE .

    ID              reduce using rule 20 (return_type -> BOOL_TYPE .)


state 26

    (21) return_type -> STRING_TYPE .

    ID              reduce using rule 21 (return_type -> STRING_TYPE .)


state 27

    (13) var_dec -> var_type var_list . SEMICOLON
    (22) var_list -> var_list . COMMA var_list_item

    SEMICOLON       shift and go to state 37
    COMMA           shift and go to state 38


state 28

    (27) func_dec -> var_type func_body .

    RCB             reduce using rule 27 (func_dec -> var_type func_body .)
    VOID            reduce using rule 27 (func_dec -> var_type func_body .)
    STATIC          reduce using rule 27 (func_dec -> var_type func_body .)
    INT_TYPE        reduce using rule 27 (func_dec -> var_type func_body .)
    REAL_TYPE       reduce using rule 27 (func_dec -> var_type func_body .)
    BOOL_TYPE       reduce using rule 27 (func_dec -> var_type func_body .)
    STRING_TYPE     reduce using rule 27 (func_dec -> var_type func_body .)
    ID              reduce using rule 27 (func_dec -> var_type func_body .)


state 29

    (23) var_list -> var_list_item .

    SEMICOLON       reduce using rule 23 (var_list -> var_list_item .)
    COMMA           reduce using rule 23 (var_list -> var_list_item .)


state 30

    (30) func_body -> ID . LP formal_arguments RP block
    (26) var_list_item -> ID .
    (24) item1 -> ID . ASSIGNMENT exp

    LP              shift and go to state 39
    SEMICOLON       reduce using rule 26 (var_list_item -> ID .)
    COMMA           reduce using rule 26 (var_list_item -> ID .)
    ASSIGNMENT      shift and go to state 40


state 31

    (25) var_list_item -> item1 .
